fix counternode going behind feed title on gecko

--- a/css/tt-rss.css
+++ b/css/tt-rss.css
@@ -1120,6 +1120,7 @@ body#ttrssMain #feedTree {
 	border-radius : 4px;
 	vertical-align : middle;
 	float : right;
+	position : relative;
 	line-height : 14px;
 	margin-right : 4px;
 	margin-top : 3px;
